@@ -5,6 +5,7 @@ Date: idk
     - Fixed coalbed recipes requiring 500 degree pressurized water.
     - Fixed some fluids not having subgroups.
     - Fixed crash on startup with pyPH and pyHT.
+    - Fixed that bitumen seeps did not respect quality.
     - A rose by any other quality would smell as sweet
 ---------------------------------------------------------------------------------------------------
 Version: 3.0.1
